--- a/inventory2.ini
+++ b/inventory2.ini
@@ -1,4 +1,2 @@
 [target]
-localhost ansible_connection=local
-[maddy]
-192.168.74.133 ansible_connection=ssh ansible_user=ubuntu2 ansible_ssh_private_key_file=/home/ubuntu1/my-repo/maddykey
+192.168.74.133 ansible_connection=ssh ansible_user=ubuntu2 ansible_become_user=root  ansible_become_password=root12 ansible_ssh_private_key_file=/home/ubuntu1/my-repo/maddykey
